Fix some rpcgen sample file issues.

* -Sc was generating code without a return type on main.
* -Sm was generating an unusable clean target due to undefined RM.
* -Sm was generating clean target with extra preceding space.

PR:		185582
Submitted by:	Pawel Biernacki <pawel.biernacki@gmail.com>
MFC after:	1 week

Former-commit-id: 280ca7647f4ec91e1311b416256a0ff44cde7ea5